# SynthMemBench

./: CMakeLists.txt  README.md
include/: additional.h  perf_reader.h  shared_memory_maker.h  utils.h
src/: perf_reader.c  shared_memory_maker.c  utils.c
src/benchmarks/: memcpy.c  memset.c  read_miss.c  write_miss.c
